--- a/register.html
+++ b/register.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="register.css">
-    <title>General Trias || Sign Up</title>
-    <link rel="shortcut icon" href="/images/logo.png">
+    <title>Barangay II-C || Log-in</title>
+    <link rel="shortcut icon" href="C:\Users\PersonalPC\Desktop\Official Website of Barangay II-C\BRGY2-C\logo.jpg">
 </head>
 <body>
     <div class="background">
@@ -16,12 +16,12 @@
         <fieldset>
             <div class="leftside">
                 <h1>WELCOME</h1>
-                <h1><p>TO THE OFFICIAL WEBSITE OF</p> <p>GENERAL TRIAS</p></h1>
+                <h1><p>TO THE OFFICIAL WEBSITE OF</p> <p>Barangay II-C</p></h1>
             </div>
             <div class="rightside">
                 <div class="login">
                     <div>
-                        <img src="images/Header_Logo_New.png">
+                        <img src="C:\Users\PersonalPC\Desktop\Official Website of Barangay II-C\BRGY2-C\logo.jpg">
                     </div>
                     <div>
                         <h5>CREATE AN ACCOUNT</h5>
