--- a/register.html
+++ b/register.html
@@ -6,11 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="register.css">
     <title>Barangay II-C || Log-in</title>
-    <link rel="shortcut icon" href="C:\Users\PersonalPC\Desktop\Official Website of Barangay II-C\BRGY2-C\logo.jpg">
+    <link rel="shortcut icon" href="C:\Users\PersonalPC\Desktop\Official Website of Barangay II-C\BRGY2-C\logo.JPG">
 </head>
 <body>
     <div class="background">
-        <img src="images/2.jpg"/>
+        <img src="C:\Users\PersonalPC\Desktop\Official Website of Barangay II-C\BRGY2-C\123123.JPG"/>
     </div>
     <article>
         <fieldset>
@@ -21,7 +21,7 @@
             <div class="rightside">
                 <div class="login">
                     <div>
-                        <img src="C:\Users\PersonalPC\Desktop\Official Website of Barangay II-C\BRGY2-C\logo.jpg">
+                        <img src="C:\Users\PersonalPC\Desktop\Official Website of Barangay II-C\BRGY2-C\logo.JPG">
                     </div>
                     <div>
                         <h5>CREATE AN ACCOUNT</h5>
